--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.15.0",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
