--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
     "expo": "~45.0.0",
+    "expo-blur": "~11.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.11.1",
