--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
