--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-blur": "~11.1.0",
     "expo-splash-screen": "~0.15.1",
