--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -19,29 +19,29 @@
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
     "dotenv": "^16.0.1",
-    "expo": "~45.0.0",
-    "expo-blur": "~11.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo": "^48.0.0",
+    "expo-blur": "~12.2.2",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
     "lodash": "^4.17.21",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.4",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/lodash": "^4.14.182",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
@@ -54,7 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
